# fairpley-backend

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml  dependabot-auto-merge.yml
