[package]
name = "fairpley-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
aide = { version = "0.15.1", features = ["axum", "axum-json", "scalar"] }
anyhow = { version = "1.0.100", features = ["backtrace"] }
axum = { version = "0.8.8", features = ["macros"] }
axum-macros = "0.5.0"
bytes = "1.11.0"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
indexmap = "2.13.0"
rstest = "0.26.1"
schemars = { version = "0.8.22", features = ["chrono", "uuid1"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = [
    "trace",
    "timeout",
    "cors",
    "normalize-path",
] }
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v7", "fast-rng", "serde"] }

[profile.release]
debug = true
